# DriverAI

./: .clang-format  CMakeLists.txt  app_conf.json
include/: Bitmap.h  Console.h  Mesh.h  anyoption.h  darknet.h  jpeg_decoder.h  json.h  screenshot.h  tools.h
include/OpenANN/: functions.h  layers.h  neuron.h
lib/: CMakeLists.txt
libraries/: CMakeLists.txt
libs/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp  screen.cpp
source/managers/: CMakeLists.txt  Manager.cpp  Manager.hpp  SonarManager.cpp  SonarManager.hpp
source/value_iteration/: CMakeLists.txt  State.cpp  State.hpp
src/: Bitmap.cpp  CMakeLists.txt  anyoption.cpp  main.cpp  screenshot.cpp  tools.cpp
src/OpenANN/: CMakeLists.txt  functions.cpp  layers.cpp  neuron.cpp
src/internals/: CMakeLists.txt  Mesh.cpp  SceneObj.cpp
